<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/waffle_background_color"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/text_warning"
        android:textColor="@color/waffle_pink_02_color"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content_s"
        android:text="@string/text_desc_confirm_reset_factory"
        android:textColor="@color/waffle_grey_03_color"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/POMO_TextView_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:text="@string/text_are_you_sure"
        android:textColor="@color/waffle_black_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content_s"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/notification_yes" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/notification_no" />
    </LinearLayout>

</LinearLayout>