<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/waffle_background_color"
    android:paddingBottom="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_pomo_waffle"
            android:textColor="@color/waffle_black_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvImeiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imei_text"
                android:textColor="@color/waffle_grey_08_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvImei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/waffle_grey_04_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSeriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_text"
                android:textColor="@color/waffle_grey_08_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/waffle_grey_04_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFirmwareTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firmware_text"
                android:textColor="@color/waffle_grey_08_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFirmware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/waffle_grey_04_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>