<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/waffle_grey_11_color"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivSettingProfile"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/setting_power_off" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/POMO_TextView_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_content_l"
        android:gravity="center"
        android:text="@string/text_title_restart"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content_l"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/POMO_Button_Red"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_content"
                android:paddingBottom="@dimen/margin_content"
                android:paddingTop="@dimen/margin_content"
                android:text="@string/action_cancel"
                android:textColor="@color/waffle_grey_11_color"
                android:textSize="22sp"
                />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                style="@style/POMO_Button_Lemon"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/margin_content"
                android:paddingBottom="@dimen/margin_content"
                android:paddingTop="@dimen/margin_content"
                android:text="@string/action_ok"
                android:textColor="@color/waffle_grey_11_color"
                />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>